# Shifter

./: .flake8  Dockerfile  README.md  app.py  config.py  database.py  docker-compose.yml  pyproject.toml  start_local.sh
.github/workflows/: lint.yml
modules/company/: company.py
modules/requests_feed/: requests_feed.py  requests_feed_controller.py
modules/shift/: shift.py
modules/trade_request/: trade_request.py  trade_request_controller.py
modules/trade_request/tests/: trade_request_controller_test.py
modules/user/: user.py  user_controller.py  user_login.py  user_logout.py  user_signup.py
templates/: base.html  create_request.html  index.html  signup.html
tools/: message_formatter.py
