[tool.poetry]
name = "shifter"
version = "0.1.0"
description = ""
authors = ["eran.n <eran.n@syte-vc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
pydantic = "^2.6.4"
pymongo = "^4.6.3"
flask-restful = "^0.3.10"
flask-pymongo = "^2.3.0"
flask-caching = "^2.1.0"
loguru = "^0.7.2"
flask-cors = "^4.0.0"
black = "^24.3.0"
flask-login = "^0.6.3"
pytest = "^8.1.1"
flask-sqlalchemy = "^3.1.1"
flake8 = "^7.0.0"
fastapi = "^0.110.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
